--- a/analysis/Edouard/Edouard_Milestone2_DataImport.ipynb
+++ b/analysis/Edouard/Edouard_Milestone2_DataImport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,15 +218,15 @@
        "[15672 rows x 9 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "import project_functions # This is called a relative import\n",
+    "#import sys\n",
+    "#sys.path.append(\"..\")\n",
+    "from scripts import project_functions # This is called a relative import\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
