--- a/analysis/Haris/Milestone2Step3.ipynb
+++ b/analysis/Haris/Milestone2Step3.ipynb
@@ -1,26 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -28,8 +6,102 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Planet Name</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>FeatureName</th>\n",
+       "      <th>FeatureType</th>\n",
+       "      <th>Planetary Feature</th>\n",
+       "      <th>Latitude of Center of Planetary Feature</th>\n",
+       "      <th>Longitude of Center of Planetary Feature</th>\n",
+       "      <th>Size of Planetary Feature(km)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1357</td>\n",
+       "      <td>Mars</td>\n",
+       "      <td>4574.0</td>\n",
+       "      <td>Pandorae Fretum</td>\n",
+       "      <td>albedo feature</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>-24.741878</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1459</td>\n",
+       "      <td>Mars</td>\n",
+       "      <td>6596.0</td>\n",
+       "      <td>Xanthe</td>\n",
+       "      <td>albedo feature</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>9.884955</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1168</td>\n",
+       "      <td>Mars</td>\n",
+       "      <td>2132.0</td>\n",
+       "      <td>Gehon</td>\n",
+       "      <td>albedo feature</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>14.831743</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1462</td>\n",
+       "      <td>Mars</td>\n",
+       "      <td>6639.0</td>\n",
+       "      <td>Yaonis Regio</td>\n",
+       "      <td>albedo feature</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>-39.667248</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1165</td>\n",
+       "      <td>Mars</td>\n",
+       "      <td>4213.0</td>\n",
+       "      <td>Nereidum Fretum</td>\n",
+       "      <td>albedo feature</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>-44.661768</td>\n",
+       "      <td>305.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "   index Planet Name      ID        FeatureName       FeatureType  \\\n",
        "0   1357        Mars  4574.0   Pandorae Fretum    albedo feature    \n",
@@ -51,11 +123,11 @@
        "2                                     360.0                            0.0  \n",
        "3                                      40.0                            0.0  \n",
        "4                                     305.0                            0.0  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>index</th>\n      <th>Planet Name</th>\n      <th>ID</th>\n      <th>FeatureName</th>\n      <th>FeatureType</th>\n      <th>Planetary Feature</th>\n      <th>Latitude of Center of Planetary Feature</th>\n      <th>Longitude of Center of Planetary Feature</th>\n      <th>Size of Planetary Feature(km)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1357</td>\n      <td>Mars</td>\n      <td>4574.0</td>\n      <td>Pandorae Fretum</td>\n      <td>albedo feature</td>\n      <td>AL</td>\n      <td>-24.741878</td>\n      <td>44.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1459</td>\n      <td>Mars</td>\n      <td>6596.0</td>\n      <td>Xanthe</td>\n      <td>albedo feature</td>\n      <td>AL</td>\n      <td>9.884955</td>\n      <td>310.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1168</td>\n      <td>Mars</td>\n      <td>2132.0</td>\n      <td>Gehon</td>\n      <td>albedo feature</td>\n      <td>AL</td>\n      <td>14.831743</td>\n      <td>360.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1462</td>\n      <td>Mars</td>\n      <td>6639.0</td>\n      <td>Yaonis Regio</td>\n      <td>albedo feature</td>\n      <td>AL</td>\n      <td>-39.667248</td>\n      <td>40.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1165</td>\n      <td>Mars</td>\n      <td>4213.0</td>\n      <td>Nereidum Fretum</td>\n      <td>albedo feature</td>\n      <td>AL</td>\n      <td>-44.661768</td>\n      <td>305.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "execution_count": 1
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -71,5 +143,26 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
