Edits to our group EDA

--- a/analysis/Edouard/EDA.ipynb
+++ b/analysis/Edouard/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "      <th>FeatureName</th>\n",
        "      <td>15672</td>\n",
        "      <td>15493</td>\n",
-       "      <td>Kuiper</td>\n",
+       "      <td>Herschel</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -89,12 +89,12 @@
       "text/plain": [
        "                   count unique                  top  freq\n",
        "Planet Name        15672     45                 Moon  9037\n",
-       "FeatureName        15672  15493              Kuiper      3\n",
+       "FeatureName        15672  15493            Herschel      3\n",
        "FeatureType        15672     54   satellite feature   7066\n",
        "Planetary Feature  15672     54                   SF  7066"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "Size of Planetary Feature(km)             11000.000000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
