re-arragned files, added data_processed

--- a/analysis/Edouard/Edouard_Milestone2_DataImport.ipynb
+++ b/analysis/Edouard/Edouard_Milestone2_DataImport.ipynb
@@ -2,227 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Planet Name</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>FeatureName</th>\n",
-       "      <th>FeatureType</th>\n",
-       "      <th>Planetary Feature</th>\n",
-       "      <th>Latitude of Center of Planetary Feature</th>\n",
-       "      <th>Longitude of Center of Planetary Feature</th>\n",
-       "      <th>Size of Planetary Feature(km)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1357</td>\n",
-       "      <td>Mars</td>\n",
-       "      <td>4574.0</td>\n",
-       "      <td>Pandorae Fretum</td>\n",
-       "      <td>albedo feature</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>-24.741878</td>\n",
-       "      <td>44.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1459</td>\n",
-       "      <td>Mars</td>\n",
-       "      <td>6596.0</td>\n",
-       "      <td>Xanthe</td>\n",
-       "      <td>albedo feature</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>9.884955</td>\n",
-       "      <td>310.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1168</td>\n",
-       "      <td>Mars</td>\n",
-       "      <td>2132.0</td>\n",
-       "      <td>Gehon</td>\n",
-       "      <td>albedo feature</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>14.831743</td>\n",
-       "      <td>360.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1462</td>\n",
-       "      <td>Mars</td>\n",
-       "      <td>6639.0</td>\n",
-       "      <td>Yaonis Regio</td>\n",
-       "      <td>albedo feature</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>-39.667248</td>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1165</td>\n",
-       "      <td>Mars</td>\n",
-       "      <td>4213.0</td>\n",
-       "      <td>Nereidum Fretum</td>\n",
-       "      <td>albedo feature</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>-44.661768</td>\n",
-       "      <td>305.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15667</th>\n",
-       "      <td>828</td>\n",
-       "      <td>Titan</td>\n",
-       "      <td>7007.0</td>\n",
-       "      <td>Hobal Virga</td>\n",
-       "      <td>virga</td>\n",
-       "      <td>VI</td>\n",
-       "      <td>-35.000000</td>\n",
-       "      <td>194.000000</td>\n",
-       "      <td>1075.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15668</th>\n",
-       "      <td>860</td>\n",
-       "      <td>Titan</td>\n",
-       "      <td>7008.0</td>\n",
-       "      <td>Kalseru Virga</td>\n",
-       "      <td>virga</td>\n",
-       "      <td>VI</td>\n",
-       "      <td>-36.000000</td>\n",
-       "      <td>223.000000</td>\n",
-       "      <td>630.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15669</th>\n",
-       "      <td>861</td>\n",
-       "      <td>Titan</td>\n",
-       "      <td>7009.0</td>\n",
-       "      <td>Shiwanni Virgae</td>\n",
-       "      <td>virga</td>\n",
-       "      <td>VI</td>\n",
-       "      <td>-25.000000</td>\n",
-       "      <td>328.000000</td>\n",
-       "      <td>1400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15670</th>\n",
-       "      <td>987</td>\n",
-       "      <td>Titan</td>\n",
-       "      <td>15352.0</td>\n",
-       "      <td>Tishtrya Virgae</td>\n",
-       "      <td>virga</td>\n",
-       "      <td>VI</td>\n",
-       "      <td>23.836026</td>\n",
-       "      <td>180.245045</td>\n",
-       "      <td>276.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15671</th>\n",
-       "      <td>781</td>\n",
-       "      <td>Titan</td>\n",
-       "      <td>14658.0</td>\n",
-       "      <td>Uanui Virgae</td>\n",
-       "      <td>virga</td>\n",
-       "      <td>VI</td>\n",
-       "      <td>45.200000</td>\n",
-       "      <td>124.700000</td>\n",
-       "      <td>917.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>15672 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       index Planet Name       ID        FeatureName       FeatureType  \\\n",
-       "0       1357        Mars   4574.0   Pandorae Fretum    albedo feature    \n",
-       "1       1459        Mars   6596.0            Xanthe    albedo feature    \n",
-       "2       1168        Mars   2132.0             Gehon    albedo feature    \n",
-       "3       1462        Mars   6639.0      Yaonis Regio    albedo feature    \n",
-       "4       1165        Mars   4213.0   Nereidum Fretum    albedo feature    \n",
-       "...      ...         ...      ...                ...               ...   \n",
-       "15667    828       Titan   7007.0       Hobal Virga             virga    \n",
-       "15668    860       Titan   7008.0     Kalseru Virga             virga    \n",
-       "15669    861       Titan   7009.0   Shiwanni Virgae             virga    \n",
-       "15670    987       Titan  15352.0   Tishtrya Virgae             virga    \n",
-       "15671    781       Titan  14658.0      Uanui Virgae             virga    \n",
-       "\n",
-       "      Planetary Feature  Latitude of Center of Planetary Feature  \\\n",
-       "0                    AL                               -24.741878   \n",
-       "1                    AL                                 9.884955   \n",
-       "2                    AL                                14.831743   \n",
-       "3                    AL                               -39.667248   \n",
-       "4                    AL                               -44.661768   \n",
-       "...                 ...                                      ...   \n",
-       "15667                VI                               -35.000000   \n",
-       "15668                VI                               -36.000000   \n",
-       "15669                VI                               -25.000000   \n",
-       "15670                VI                                23.836026   \n",
-       "15671                VI                                45.200000   \n",
-       "\n",
-       "       Longitude of Center of Planetary Feature  Size of Planetary Feature(km)  \n",
-       "0                                     44.000000                            0.0  \n",
-       "1                                    310.000000                            0.0  \n",
-       "2                                    360.000000                            0.0  \n",
-       "3                                     40.000000                            0.0  \n",
-       "4                                    305.000000                            0.0  \n",
-       "...                                         ...                            ...  \n",
-       "15667                                194.000000                         1075.0  \n",
-       "15668                                223.000000                          630.0  \n",
-       "15669                                328.000000                         1400.0  \n",
-       "15670                                180.245045                          276.0  \n",
-       "15671                                124.700000                          917.0  \n",
-       "\n",
-       "[15672 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scripts import project_functions # This is called a relative import\n",
     "import pandas as pd\n",
@@ -230,7 +12,9 @@
     "\n",
     "\n",
     "df = project_functions.load_and_process(\"../../data/raw/nomenclature.csv\")\n",
-    "df"
+    "\n",
+    "\n",
+    "df.to_csv(\"nomenclature_processed.csv\")"
    ]
   },
   {
